@@ -594,6 +594,7 @@ Jan Kaliszewski
 Peter van Kampen
 Rafe Kaplan
 Jacob Kaplan-Moss
+Janne Karila
 Per Øyvind Karlsen
 Lou Kates
 Hiroaki Kawai
